--- a/android/bin/AndroidManifest.xml
+++ b/android/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mygdx.game.android"
+    package="cycle.escape.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,11 +9,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Cycle-Escape"
         android:theme="@style/GdxTheme" >
         <activity
-            android:name="com.mygdx.game.android.AndroidLauncher"
-            android:label="@string/app_name" 
+            android:name="cycleEscape.android.AndroidLauncher"
+            android:label="Cycle-Escape" 
             android:screenOrientation="portrait"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
